# miniDataProcessing

./: .dockerignore  .gitignore  ANALYST.md  README.md
.github/workflows/: deploy.yml  sync-env.yml
datalake/: definitions.py  paths.py
datalake/.tmp_dagster_home_feixjldv/history/: runs.db
datalake/.tmp_dagster_home_feixjldv/history/runs/: .db  9ee990eb-3b26-4076-94ff-8e41a7f63821.db  f2aac6fa-fef6-4555-9c7b-337d43f040fa.db  index.db
datalake/.tmp_dagster_home_feixjldv/schedules/: schedules.db
datalake/.tmp_dagster_home_feixjldv/storage/: cbr_clean  cbr_raw  cbr_to_s3
datalake/assets/: cbr.py
datalake/connectors/: duckdb_s3.py  kafka_client.py  rest_api.py  s3_upload.py
datalake/deploy/: docker-compose.flink.yml  docker-compose.yml  dockerfile  flink.Dockerfile  pyproject.toml
datalake/jobs/: cbr.py  hh.py
datalake/pipelines/_template/: assets.py  extract.py  transform.py
datalake/pipelines/cbr/: assets.py  extract.py  transform.py
datalake/pipelines/hh/: assets.py  extract.py  roles.py  transform.py
datalake/streaming/: flink_submit.py
datalake/streaming/examples/: dashboard.py  produce_test_events.py
datalake/streaming/jobs/: rolling_metrics.py
datalake/tests/: test_cbr_transform.py
