[project]
name = "datalake"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "dagster",
    "dagster-webserver",
    "duckdb",
    "polars",
    "httpx",
    "boto3",
    "python-dotenv",
    "kafka-python",
    "streamlit",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["datalake*"]